--- a/style.css
+++ b/style.css
@@ -7,14 +7,29 @@ body {
     background-color: hsla(0, 0%, 100%, 0.75);
 }
 
-main {
-  width: 61%;
-  height: 70%;
-  margin: auto;
-  margin-top: 7%;
-  display: flex;
-  align-items: center;
-  justify-items: center;
+@media screen and (min-width: 375px) and (max-width: 1440px) {
+    main {
+        width: 61%;
+        height: 70%;
+        margin: auto;
+        margin-top: 7%;
+        display: flex;
+        align-items: center;
+        justify-items: center;
+      }
+}
+
+@media screen and (min-width: 375px) and (max-width: 1440px) {
+    main {
+        width: 61%;
+        height: 70%;
+        margin: auto;
+        margin-top: 7%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-items: center;
+      }
 }
 
 nav {
